# powerpatent

./: .gitignore  index.html  mockup_generator.html  mockup_output.html  package-lock.json  package.json  patent-reader-dev-spec.md
.github/workflows/: build.yml
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/prompts/: e2_figure_comparison.yaml  e4_comparison_matrix.yaml  e5_tech_timeline.yaml  e6_applicant_profile.yaml  e7_design_around.yaml  m1_basic_info.yaml  m2_legal_status.yaml  m3_family.yaml  m4_summary.yaml  m5_claims.yaml  m6_embodiments.yaml  m7_alternatives.yaml  m8_family_claims_diff.yaml
src-tauri/src/: lib.rs
src-tauri/src/ai/: client.rs  figure_labels.rs  mod.rs  models.rs  prompt.rs  provider.rs  proxy.rs
src-tauri/src/cache/: mod.rs  sqlite.rs
src-tauri/src/commands/: cache.rs  export.rs  generate.rs  input.rs  mod.rs
src-tauri/src/ocr/: glm.rs  label_filter.rs  mod.rs  paddle.rs
src-tauri/src/pdf/: extract.rs  figure_pipeline.rs  images.rs  mod.rs  render.rs
src-tauri/src/render/: assets.rs  mod.rs  template.rs
src-tauri/src/table/: csv.rs  mapping.rs  mod.rs  xlsx.rs
src-tauri/src/types/: mod.rs  module_config.rs  patent.rs
src/components/: HistoryPanel.vue  M1Editor.vue  ModulePreview.vue  PdfViewer.vue
src/components/annotation/: AnnotationPanel.vue  AnnotationSummary.vue
src/components/input/: FieldMapping.vue  FileDrop.vue  PatentList.vue
src/components/layout/: AppHeader.vue  MainLayout.vue  StepNav.vue
src/components/settings/: SettingsDrawer.vue
src/router/: index.ts
src/services/: ai.ts  tauri.ts
src/stores/: aiConfig.ts  annotation.ts  cache.ts  history.ts  input.ts  moduleConfig.ts  project.ts  settings.ts
src/styles/: global.css
src/types/: ai.ts  module.ts  patent.ts
src/utils/: persist.ts
src/views/: AIConfigView.vue  ConfigView.vue  ExportView.vue  GenerateView.vue  InputView.vue
