[package]
name = "app"
version = "0.1.0"
description = "PatentReader - 专利解读生成器"
authors = ["Alfred Shi"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
# PDF 文本抽取
pdf-extract = "0.7"
# 表格解析
calamine = "0.26"
# HTTP 客户端（OCR / AI 调用）
reqwest = { version = "0.12", features = ["json", "stream"] }
# 异步运行时
tokio = { version = "1", features = ["full"] }
# 正则
regex = "1"
# CSV 解析
csv = "1.3"
# 错误处理
anyhow = "1"
# YAML 解析（Prompt 模板）
serde_yaml = "0.9"
# Handlebars 模板引擎
handlebars = "6"
# SQLite 缓存
rusqlite = { version = "0.32", features = ["bundled"] }
# SSE 解析
futures = "0.3"
# UUID
uuid = { version = "1", features = ["v4"] }
# Base64 编码（资源内联）
base64 = "0.22"
# 时间处理
chrono = "0.4"
